Preparations for API. Updated packages.
