# api/controllers/users.js
@@ -1,0 +1,8 @@
+'use strict';
+
+// Module for handling API calls to /users
+
+module.exports = {
+  users: users,
+  getUserById: getUserById
+};
